Updated to be more useful for homework.